styles/index.css
/* HEADER */
header nav {
  width: 100%;
  place-self: center;
}

header nav .flex {
  gap: 2.875rem;
  justify-content: flex-end;
}

/* HERO */
.cta--blue {
  color: var(--clr-primary-dark);
  padding-top: 3rem;
}

.cta__heading {
  font-size: var(--fs-heading-primary);
}

.cta__form {
  font-size: var(--fs-200);
}

.cta__form__input {
  max-width: 20rem;
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1;
  border: 1px solid var(--clr-neutral-dark);
  border-radius: 0.25em;

  box-shadow: rgba(0, 0, 0, 0.15) 0.2em 0.2em 2.6px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0.2em 0.2em 2.6px;
  -moz-box-shadow: rgba(0, 0, 0, 0.15) 0.2em 0.2em 2.6px;
}

.cta__form__button {
  max-width: 12rem;
  background-color: var(--clr-accent-light);
  color: white;
  transition: filter 0.3s ease-out;
}

/* BACKGROUND */
.background {
  background: url('../images/bg-curve-desktop.svg') no-repeat bottom/contain;
  max-width: 1400px;
  width: 100%;
  padding-block: 6rem;
  margin-inline: auto;
}

/* TESTIMONIAL */
#testimonial-section {
  background-color: #F8F8FE;
  color: var(--clr-primary-dark);
}

#testimonial-section .container {
  --padding-block: 3rem 6rem;
}

#testimonial-section .grid {
  grid-template-columns: 55% 45%;
}

#testimonial-section h2 {
  font-size: var(--fs-heading-primary);
}

#testimonial-section .container > div > p {
  width: 80%;
  font-size: var(--fs-300);
}

#testimonial-section .container > img {
  place-self: start center;
  width: 90%;
  padding-top: 2rem;
}

.link-container {
  display: inline-block;
  font-size: var(--fs-300);
  color: var(--clr-accent-dark);
  border-bottom: 1px solid var(--clr-accent-dark);
  padding-bottom: 0.2rem;
  line-height: 1;
}

.link-container::after {
  content: url(../images/icon-arrow.svg);
  vertical-align: text-bottom;
}

.link-container a {
  margin-right: 0.2rem;
}

.testimonial {
  max-width: 22rem;
  width: 100%;
  background-color: #FFF;
  border-radius: 0.375rem;
  padding: 1rem 1.75rem;
  text-align: start;

  box-shadow: rgba(0, 0, 0, 0.24) 0em 0.188em 0.5em;
  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0em 0.188em 0.5em;
  -moz-box-shadow: rgba(0, 0, 0, 0.24) 0em 0.188em 0.5em;
}

.testimonial::before {
  content: url(../images/icon-quotes.svg);
}

.testimonial__text {
  font-size: var(--fs-200);
  line-height: 1.7;
}

.testimonial__profile.flex {
  gap: 0.625rem;
}

.testimonial__profile .flex {
  font-size: var(--fs-100);
  flex-direction: column;
  align-items: flex-start;
  gap: 0.25rem;
  line-height: 1;
}

.testimonial__profile .avatar {
  width: 2.25rem;
  border-radius: 50%;
}

/* CTA */
#cta-section {
  background-color: var(--clr-primary-light);
}

#cta-section .grid {
  grid-template-columns: 55% 45%;
}

#cta-section .container {
  --padding-block: 5rem;
}

.cta--white {
  color: var(--clr-neutral-light);
}

.cta--white .cta__heading {
  font-size: var(--fs-heading-secondary);
}

.cta--white .cta__subheading {
  width: 80%;
  font-size: calc(var(--fs-300) + 1px);
}

.cta__form--white {
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.cta__form--white .cta__form__input {
  max-width: 30rem;
  width: 95%;
}

/* FOOTER */
footer {
  background-color: var(--clr-primary-dark);
  color: var(--clr-neutral-light);
  font-size: var(--fs-300);
}

footer .container {
  --padding-block: 5rem;
}

footer .logo svg path {
  fill: var(--clr-neutral-light);
}

nav[aria-label="footer"] {
  grid-template-columns: repeat(3, minmax(max-content, 33.33%));
  gap: min(5vw, 5rem);

}

nav[aria-label="footer"] .address.flex {
  flex-direction: column;
  align-items: flex-start;
}

#phone::before,
#email::before {
  margin-right: 1rem;
}

#phone::before {
  content: url(../images/icon-phone.svg);
}

#email::before {
  content: url(../images/icon-email.svg);
}

nav[aria-label="footer"] .grid {
  grid-template-rows: repeat(4, 1fr);
  grid-auto-columns: 1fr;
  grid-auto-flow: column;
  gap: 1rem min(5vw, 5rem);
}

/* transition effects for footer links */
nav[aria-label="footer"] ul .link,
.social-link-container a {
  transition: color 0.3s ease-out;
}

nav[aria-label="footer"] .social-link.flex {
  place-self: start;
}

.social-link-container {
  display: grid;
  place-items: center;
  width: 2rem;
  height: 2rem;
  border: 1px solid var(--clr-neutral-light);
  border-radius: 50%;
  cursor: pointer;
  transition: border-color 0.15s ease-out;
}

/* HOVER STYLES ON FOOTER LINKS */

#testimonial-section .link-container:hover,
#testimonial-section .link-container:active,
.cta__form__button:hover,
.cta__form__button:active {
  filter: brightness(130%);
}

nav[aria-label="footer"] ul .link:hover,
nav[aria-label="footer"] ul .link:active {
  color: var(--clr-accent-light);
}

.social-link-container:hover,
.social-link-container a:active {
  color: var(--clr-accent-light);
  border-color: var(--clr-accent-light);
}

